spacing corrected

--- a/wwr/site-plan-rafting.css
+++ b/wwr/site-plan-rafting.css
@@ -16,7 +16,7 @@ body {
 
     --nav-background-color:#ab3428ff;
     --nav-link-color:#f3e8eeff;
-    --nav-hover-link-color:#ab3428ff;
+    --nav-hover-link-color:#f3e8eeff;
     --nav-hover-background-color:#004385ff ;
 } 
 body {
